--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,8 @@
 // Import all of Bootstrap's CSS
 @import "bootstrap/scss/bootstrap";
-
-
-nav{
-  a{
-
-  }
-}
+//Import fontawesome icons
+@import '@fortawesome/fontawesome-free/css/fontawesome.css';
+@import '@fortawesome/fontawesome-free/css/brands.css';
+@import '@fortawesome/fontawesome-free/css/regular.css';
+@import '@fortawesome/fontawesome-free/css/solid.css';
+@import '@fortawesome/fontawesome-free/css/v4-shims.css';
